2004-05-28  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/stringutils.{cc,h} (expand_pathname): Operate directly in
	filename encoding since all callers need to convert one way or
	the other anyway.  Change type of parameter and return value to
	std::string accordingly.
	(shorten_pathname): ditto.

	* src/mainwindow.cc (MainWindow::MainWindow): Reverse order of
	the calls to filename_to_utf8_fallback() and shorten_pathname().
	(MainWindow::on_select_folder): ditto
	(MainWindow::on_find_files): ditto.

	* src/mainwindow.{cc,h} (MainWindow::set_title_filename): Change
	parameter type to std::string and call filename_to_utf8_fallback().
	Also remove the default argument from the declaration, and get rid
	of the logic that handles the empty string.
	(MainWindow::MainWindow): Call window_->set_title() directly in
	order to set the default title, instead of passing an empty string
	to set_title_filename().
	(MainWindow::on_filetree_switch_buffer): ditto.

2004-05-27  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/stringutils.cc (filename_to_utf8_fallback): On failure,
	don't fall back to the locale encoding anymore but straight to
	plain ASCII.  Thus from now on, this function will never throw
	for errors of type ConvertError::ILLEGAL_SEQUENCE.  Also cover
	the new G_FILENAME_ENCODING variable in the warning message.

	* src/filetree.cc (FileTree::find_files): Remove the explicit
	handling of Glib::ConvertError.

2004-05-26  Daniel Elstner  <daniel.elstner@gmx.net>

	* regexxer.schemas.in: Use colors from the basic GNOME 32-color
	palette for the match_color and current_match_color default values.

2004-05-26  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/stringutils.cc (apply_modifiers): Validate the UCS-4 code
	point returned by Unicode::tolower() or Unicode::totitle() before
	appending it to the string.  This is necessary because for example
	converting U+00DF to title case is an invalid operation.

2004-05-25  Daniel Elstner  <daniel.elstner@gmx.net>
